--- a/Model_Test.ipynb
+++ b/Model_Test.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9ba2699a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tokenizers import Tokenizer, models, trainers, pre_tokenizers\n",
+    "from tokenizers import Tokenizer\n",
     "from pathlib import Path\n",
     "from torch.nn import LSTM\n",
     "import torch.nn as nn\n",
